<resources>
    <string name="app_name">Visualizer Preferences</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="settings">Settings</string>

    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <string name="pref_show_false">Hidden</string>
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_square_label">Show Square</string>
    <string name="pref_show_square_key">show_square</string>
    <string name="pref_show_tri_label">Show Triangle</string>
    <string name="pref_show_triangle_key">show_triangle</string>


    <string name="pref_color_label">Shape Color</string>

    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_color_label_blue">Blue</string>
    <!-- Label for green color preference -->
    <string name="pref_color_label_green">Green</string>

    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>
    <string name="pref_size_label">Size Multiple</string>
    <string name="pref_size_key">size</string>
    <string name="pref_size_default_value">1</string>


</resources>