<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:title="@string/pref_show_bass_label"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:key="@string/pref_show_bass_key"
        android:defaultValue="@bool/pref_show_bass_default"/>

    <CheckBoxPreference
        android:title="@string/pref_show_square_label"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:key="@string/pref_show_square_key"
        android:defaultValue="@bool/pref_show_square_default"/>

    <CheckBoxPreference
        android:title="@string/pref_show_tri_label"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:key="@string/pref_show_triangle_key"
        android:defaultValue="@bool/pref_show_triangle_default"/>

    <ListPreference
        android:defaultValue="@string/pref_color_red_value"
        android:key="@string/pref_color_key"
        android:title="@string/pref_color_label"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"/>

    <EditTextPreference
        app:title="@string/pref_size_label"
        android:key="@string/pref_size_key"
        android:defaultValue="@string/pref_size_default_value"/>

</PreferenceScreen>